Fixed button spacing on reserved-page.

--- a/themes/finna2/less/finna/myresearch.less
+++ b/themes/finna2/less/finna/myresearch.less
@@ -99,7 +99,7 @@
       }
     }
   }
-  .renew-button, #renewAll, #renewSelected, #update_selected, #cancelAll, #cancelSelected {
+  .renew-button, #renewAll, #renewSelected, #update_selected {
     height: 35px;
     padding: 0 10px;
     margin-right: 12px;
